--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -8,13 +8,4 @@ services:
       - "${API_PORT}:${API_PORT_DOCKER}"
     volumes:
       - .:/code
-    command:
-      [
-        "uvicorn",
-        "main:app",
-        "--host",
-        "0.0.0.0",
-        "--port",
-        "${API_PORT_DOCKER}",
-        "--reload"
-      ]
+    command: [ "python", "main.py" ]
