improved env-example file

--- a/api/.env-example
+++ b/api/.env-example
@@ -10,4 +10,5 @@ DB_PORT=
 DATABASE_NAME=
 SECRET_KEY=
 ACCESS_TOKEN_EXPIRE_MINUTES=
+# valid list of URL string like: ["http://localhost:4200"]
 BACKEND_CORS_ORIGINS=
