--- a/api/.env-example
+++ b/api/.env-example
@@ -8,3 +8,7 @@ DB_PASSWORD=
 DB_HOST=
 DB_PORT=
 DATABASE_NAME=
+SECRET_KEY=
+ACCESS_TOKEN_EXPIRE_MINUTES=
+# valid list of URL string like: ["http://localhost:4200"]
+BACKEND_CORS_ORIGINS=
