adding dep and env for sendgrid

--- a/api/.env-example
+++ b/api/.env-example
@@ -12,3 +12,5 @@ SECRET_KEY=
 ACCESS_TOKEN_EXPIRE_MINUTES=
 # valid list of URL string like: ["http://localhost:4200"]
 BACKEND_CORS_ORIGINS=
+STELLO_EMAIL=
+SENDGRID_API_KEY=
