--- a/api/.env-example
+++ b/api/.env-example
@@ -12,5 +12,11 @@ SECRET_KEY=
 ACCESS_TOKEN_EXPIRE_MINUTES=
 # valid list of URL string like: ["http://localhost:4200"]
 BACKEND_CORS_ORIGINS=
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_CSV_BUCKET=
+S3_CSV_FOLDER=
+DB_DOCKER_PORT=
+ADMINER_PORT=
 STELLO_EMAIL=
 SENDGRID_API_KEY=
