improved code consistency and validation

--- a/api/.env-example
+++ b/api/.env-example
@@ -10,7 +10,7 @@ DB_PORT=
 DATABASE_NAME=
 SECRET_KEY=
 ACCESS_TOKEN_EXPIRE_MINUTES=
-# valid list of URL string like: ["http://localhost:4200"]
+# valid list of URL string like: ["http://localhost:4200"] or ["*"]
 BACKEND_CORS_ORIGINS=
 S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
