--- a/api/.env-example
+++ b/api/.env-example
@@ -18,7 +18,7 @@ S3_CSV_BUCKET=
 S3_CSV_FOLDER=
 DB_DOCKER_PORT=
 ADMINER_PORT=
-STELLO_EMAIL=
+DEFAULT_SENDER_EMAIL=
 SENDGRID_API_KEY=
 FIRST_SUPERUSER_EMAIL=
 FIRST_SUPERUSER_PASSWORD=
